# arithmetic-formatter

./: LICENSE.md  pyproject.toml
.github/workflows/: python-ci.yml
src/arithmetic_formatter/: format.py  main.py  myoperate.py  myparse.py
tests/: format_test.py  main_test.py  operate_test.py  parse_test.py  test_format.py  test_operate.py  test_parse.py
