[tool.poetry]
name = "arithmetic-formatter"
version = "0.1.0"
description = ""
authors = ["Mihamina Rakotovazaha <r.miham@yahoo.com>"]
readme = "README.md"
packages = [{include = "arithmetic_formatter", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.6.0"
pytest = "^7.4.4"
black = "^24.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pylint = "^3.0.3"
black = "^24.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
